# music-app

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  FirstRun.qml  LibraryListModel.qml  LibraryLoader.qml  LoginLastFM.qml  MusicAlbums.qml  MusicApp.qml  MusicApp.qml.autosave  MusicArtists.qml  MusicGenres.qml  MusicNowPlaying.qml  MusicPlaylists.qml  MusicSearch.qml  MusicSettings.qml  MusicStart.qml  MusicToolbar.qml  MusicTracks.qml  MusicaddtoPlaylist.qml  NowPlaying.qml  NowPlayingPage.qml  Player.qml  QueueDialog.qml  QueuePage.qml  README-Autopilot.md  README-Developers.md  README-Mergeproposal.md  README-PullRequest.md  README-Translations.md  README.autopilot  README.md  README.translations  Style.qml  Toolbar.qml  WorkerModelLoader.qml  apparmor.json  clickable.json  com.ubuntu.music_music.desktop.in  (+23 more)
app/: CMakeLists.txt  LibraryListModel.qml  MusicAlbums.qml  MusicArtists.qml  MusicGenres.qml  MusicNowPlaying.qml  MusicPlaylists.qml  MusicStart.qml  MusicToolbar.qml  MusicTracks.qml  MusicaddtoPlaylist.qml  WorkerModelLoader.qml  music-app.qml  playlists.js
app/common/: AlbumsPage.qml  CMakeLists.txt  CardView.qml  LoadingSpinnerComponent.qml  MusicPage.qml  MusicRow.qml  SongsPage.qml
app/common/ListItemActions/: AddToPlaylist.qml  AddToQueue.qml  CMakeLists.txt
app/common/Walkthrough/: FirstRunWalkthrough.qml  Slide1.qml  Slide2.qml  Slide3.qml  Walkthrough.qml
app/components/: AlbumsPage.qml  BlurredBackground.qml  BlurredHeader.qml  CMakeLists.txt  ColumnFlow.qml  CoverGrid.qml  EmptyPlaylist.qml  LibraryListModel.qml  ListItemReorderComponent.qml  LoadingSpinnerComponent.qml  MusicPage.qml  MusicRow.qml  MusicToolbar.qml  NewPlayer.qml  NowPlayingFullView.qml  NowPlayingSidebar.qml  NowPlayingToolbar.qml  Player.qml  PlaylistsEmptyState.qml  Queue.qml  SongsPage.qml  Style.qml  WorkerModelLoader.qml  WorkerWaiter.qml
app/components/Delegates/: ActionDelegate.qml  CMakeLists.txt  Card.qml  ListItemWithActions.qml  MusicListItem.qml
app/components/Dialog/: CMakeLists.txt  ContentHubErrorDialog.qml  ContentHubNotFoundDialog.qml  ContentHubWaitDialog.qml  EditPlaylistDialog.qml  NewPlaylistDialog.qml  RemovePlaylistDialog.qml
app/components/Dialogs/: CMakeLists.txt  ContentHubWaitDialog.qml  EditPlaylistDialog.qml  NewPlaylistDialog.qml  RemovePlaylistDialog.qml
app/components/Flickables/: CMakeLists.txt  CardView.qml  MultiSelectListView.qml  MusicGridView.qml  MusicListView.qml
app/components/HeadState/: CMakeLists.txt  EmptyHeadState.qml  MultiSelectHeadState.qml  PlaylistHeadState.qml  PlaylistsHeadState.qml  QueueHeadState.qml  SearchHeadState.qml  SearchableHeadState.qml
app/components/Helpers/: CMakeLists.txt  ContentHubHelper.qml  ExternalRequest.qml  MetricHelper.qml  UriHandlerHelper.qml  UserMetricsHelper.qml
app/components/ListItemActions/: AddToPlaylist.qml  AddToQueue.qml  AddToQueueAndPlaylist.qml  CheckBox.qml  Remove.qml
app/components/Themes/Ambiance/: BubbleShape.qml  PartialColorize.qml  PartialColorizeUbuntuShape.qml  SliderStyle.qml  UbuntuBlueSliderStyle.qml
app/components/ViewButton/: PlayAllButton.qml  QueueAllButton.qml  ShuffleButton.qml
app/components/Walkthrough/: FirstRunWalkthrough.qml  Slide1.qml  Slide2.qml  Slide3.qml  Walkthrough.qml
app/images/: CMakeLists.txt
app/logic/: CMakeLists.txt  delay-request.js  meta-database.js  playlists.js  stored-request.js
app/ui/: AddToPlaylist.qml  Albums.qml  ArtistAlbums.qml  ArtistView.qml  Artists.qml  CMakeLists.txt  ContentHubExport.qml  EmptyState.qml  Genres.qml  LibraryEmptyState.qml  NowPlaying.qml  Playlists.qml  Recent.qml  Songs.qml  SongsView.qml  Tracks.qml
apparmor/: music.json
click/: CMakeLists.txt  apparmor.json  manifest.json.in  music-app-content.json
common/: AlbumsPage.qml  AlbumsSheet.qml  BlurredBackground.qml  BlurredHeader.qml  CMakeLists.txt  Card.qml  CardView.qml  ColumnFlow.qml  CoverGrid.qml  CoverRow.qml  Expandable.qml  Expander.qml  ListItemWithActions.qml  LoadingSpinnerComponent.qml  MusicPage.qml  MusicRow.qml  SearchHeadState.qml  SongsPage.qml  SongsSheet.qml  SwipeDelete.qml
common/ExpanderItems/: AddToPlaylist.qml  AddToQueue.qml  CMakeLists.txt  DeletePlaylist.qml  EditPlaylist.qml
common/ListItemActions/: AddToPlaylist.qml  AddToQueue.qml  DeletePlaylist.qml  EditPlaylist.qml  Remove.qml
common/Themes/Ambiance/: PartialColorize.qml  PartialColorizeUbuntuShape.qml  UbuntuBlueSliderStyle.qml
common/Walkthrough/: CMakeLists.txt  FirstRunWalkthrough.qml  Slide1.qml  Slide2.qml  Slide3.qml  Walkthrough.qml
common/walkthrough/: FirstRunWalkthrough.qml  Slide1.qml  Slide2.qml  Slide3.qml  Walkthrough.qml
debian/: changelog  control  copyright  install  music-app-autopilot.install  rules
po/: CMakeLists.txt  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  com.ubuntu.music.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  ga.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  km.po  (+38 more)
qml/: defaulttoolbar.qml
snap/: music-app.wrapper  snapcraft.yaml
tests/autopilot/: CMakeLists.txt
tests/autopilot/music_app/: CMakeLists.txt  __init__.py  emulators.py
tests/autopilot/music_app/content/blank-mediascanner-2.0/: mediastore.db  mediastore.sql
tests/autopilot/music_app/content/mediascanner-2.0/: blank_mediastore.db  blank_mediastore.sql  blank_mediastore.sql~  mediastore.db  mediastore.sch  mediastore.sql
tests/autopilot/music_app/emulators/: emulators.py  main_window.py
tests/autopilot/music_app/tests/: CMakeLists.txt  __init__.py  test_music.py
tests/manual/2015.com.ubuntu.music:music-tests/: manage.py
tests/manual/2015.com.ubuntu.music:music-tests/jobs/: music-external.pxu  music-library.pxu  music-playlists.pxu  music-queue.pxu  music-recent.pxu
tests/manual/2015.com.ubuntu.music:music-tests/whitelists/: music-external.whitelist  music-library.whitelist  music-playlists.whitelist  music-queue.whitelist  music-recent.whitelist
(+28 files in other folders)
